added firequiz-app to homepage

--- a/firequiz-app/package.json
+++ b/firequiz-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "firequiz-app",
   "version": "0.1.0",
-  "homepage": "https://StanleyGemstone.github.io/FireQuiz",
+  "homepage": "https://StanleyGemstone.github.io/FireQuiz/firequiz-app",
   "private": true,
   "dependencies": {
     "@mdi/font": "^7.4.47",
